Add people page instead of about

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -67,7 +67,7 @@
           %li.child= link_to child.name, child, class: ("highlight" if @collection == child)
       -else
         %li.child= link_to "Home", '#', class: "highlight"
-        %li.child= link_to "About", static_pages_about_url
+        %li.child= link_to "People", static_pages_about_url
 / %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
 /   .container-fluid
 /     .navbar-header
