--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -281,9 +281,7 @@ li {
 
 .homepage-copy {
 	margin-left: 10px;
-	h2 {
-
-	}
+	min-height: 500px;
 }
 
 
@@ -737,61 +735,7 @@ li {
 // }
 
 
-// // .collections, .topics {
-// // 	// width: 70%;
-// // 	padding-left: 8%;
-// // 	// display: inline-block;
-// // 	margin: 0 auto;
-// // 	display: block;
-// // 	text-align: center;
-// // 	li {
-// // 		width: 220px;
-// // 		list-style-type: none;
-// // 		height: 267px;
-// // 		background: #000;
-// // 		position: relative;
-// // 		float: left;
-// // 		margin-right: 15px;
-// // 		margin-bottom: 15px;
-// // 		border-radius: 3px;
-// // 		display: inline-block;
 
-// // 		.bg-img {
-// // 			// background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('microfinance.png');
-// // 			height: inherit;
-// // 			background-position: center;
-// // 			background-size: cover;
-// // 			border-radius: 3px;
-// // 			box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-// // 			left: 0;
-// // 			opacity: .6;
-// // 			// position: absolute;
-// // 			top: 0;
-// // 			width: inherit;
-// // 			position: absolute;
-// // 			&:hover {
-// // 				opacity: .8;
-// // 			}
-// // 		}
-// // 		a {
-// // 			position: relative;
-// // 			height: inherit;
-// // 			left: 0;
-// // 			width: inherit;
-// // 			display: flex;
-// // 			flex-direction: column;
-// // 			justify-content: center;
-// // 			color: white;
-// // 			text-align: center;
-// // 			font-size: 1.9em;
-// // 			font-weight: bold;
-// // 			letter-spacing: 1px;
-// // 			&:hover {
-// // 				text-decoration: none;
-// // 			}
-// // 		}
-// // 	}
-// // }
 
 .sources {
 	a {
