--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -66,8 +66,8 @@
         -@collection.root.children.each do |child|
           %li.child= link_to child.name, child, class: ("highlight" if @collection == child)
       -else
-        %li.child= link_to "Home", '#', class: "highlight"
-        %li.child= link_to "People", static_pages_about_url
+        %li.child= link_to "Home", root_url, class: ("highlight" if request.original_url == root_url)
+        %li.child= link_to "People", static_pages_about_url, class: ("highlight" if request.original_url == static_pages_about_url)
 / %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
 /   .container-fluid
 /     .navbar-header
