--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,10 +39,10 @@
           
           = yield
     
-    %footer.footer
-      %small
-        Want to get in touch? Email
-        =mail_to "info@researchgps.com"
+    / %footer.footer
+    /   %small
+    /     Want to get in touch? Email
+    /     =mail_to "info@researchgps.com"
     = debug(params) if Rails.env.development?
   / .footer 
   /   .container-fluid
