--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -15,7 +15,7 @@
         %ul
           %li
             %i.fa.fa-info-circle
-            This entry is based on
+            We'll always tell you where our information comes from, so that you can evaluate it for yourself. This entry is based on
             =raw @list.sources
 
   .row.section
