--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -29,7 +29,7 @@
     %h3
       %i.fa.fa-compass 
       The frontier research
-    The research frontier, now accessible to you in one click. Use the “search-as-you-type” search bar or navigate the directory below. 
+    The research frontier, now accessible to you in one click. Use the “search-as-you-type” search bar or navigate the directory to the left. 
 
   .col-md-4
     %h3 
