--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,28 +1,30 @@
 - provide(:title, "About")
 
+.about
+  %h3 How this works
+  %ul
+    %li 
+      %h4 1. Grab the latest recommended research on any topic
+    %li
+      %h4 2. Give back by recommending great papers to the community
 
-.row.people
-  - User.all.each do |curator|
-    - if curator.lists.count > 0
-      = link_to curator.link do
-        .col-md-3
-          .div.panel
-            .div.panel-main
-              .row
-                .col-xs-3
-                  = image_tag("#{curator.first_name}_#{curator.last_name}.jpg")
-                .col-xs-9
-                  %ul
-                    %li 
-                      %h4= "#{curator.first_name} #{curator.last_name}"
-                    %li
-                      = curator.school
-                    %li= curator.position 
-            .div.panel-sub
-              .row
-                .col-xs-12
-                  - if curator.lists.count > 1
-                    = "Helped write #{pluralize (curator.lists.count - 1), 'entry'}"
+  %h3 Who writes all of this?
+  PhD students, postdocs, and professors (See the 
+  = link_to "People", static_pages_people_url
+  page). To keep the quality of content high, we do not open up editing to everyone (aka NOT the Wikipedia model). If you're a researcher and you'd like to contribute, awesome! Email us at
+  =mail_to "info@devecgps.com."
+  It's a great way to get your name out there and to help out other researchers in your field, without the large time commitment of writing an article. You can also automatically recommend papers from any entry, without even logging in (e.g. on
+  = link_to "this entry.", '/lists/136?collection=3'
+
+  %h3 Can I trust the information?
+  %ul
+    %li We always make sure to tell you where the information comes from at the top of the page, so that you can evaluate the credibility for yourself. Entries are usually based on review articles and handbook chapters. When there isn’t a review article out there (or it’s dated, as many are), we call in the experts — late-stage PhD students, postdocs, faculty. It's just like getting a recommendation from a colleague, but quicker!
+
+
+  %h3 Can I send feedback?
+  Please do! All feedback / ideas / critiques are more than welcome. Just email
+  =mail_to "info@devecgps.com" 
+
 
 
 / %div{:class => 'row banner', :style => %(background-image:url(/assets/library-d5ccedffb00736fb55440d57db17ea46.jpg))}
