--- a/app/views/static_pages/people.html.haml
+++ b/app/views/static_pages/people.html.haml
@@ -1,66 +1,30 @@
 - provide(:title, "People")
 
-.row.heading.text-center
-  .col-xs-12 
-    %ul
-      %li
-        %h1 People
 
-
-
-%ul.people
-  %div 
-    Research GPS is comprised of 20 PhD students who write and/or review the research entries. More of them will be added to this page shortly.
-  %br
-  %br
-  =link_to "https://www.linkedin.com/pub/juan-pablo-chauvin/3/434/704" do
-    %li 
-      / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
-
-      %div= image_tag("juan_pablo_chauvin.jpg")
-      / # %span.profile-img= image_tag("Siddharth_George.jpg")
-      %div.name= "Juan Pablo Chauvin "
-      %span.position= "PhD, Economics (Harvard University)"
-
-  =link_to "http://www.iq.harvard.edu/people/siddharth-eapen-george" do
-    %li 
-      / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
-
-      %div= image_tag("Siddharth_George.jpg")
-      / # %span.profile-img= image_tag("Siddharth_George.jpg")
-      %div.name= "Siddharth George"
-      %span.position= "PhD, Economics (Harvard University)"
-
-  =link_to "https://www.linkedin.com/in/gauravchiplunkar" do
-    %li 
-      / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
-
-      %div= image_tag("Gaurav_Chiplunkar2.jpg")
-      / # %span.profile-img= image_tag("Siddharth_George.jpg")
-      %div.name= "Gaurav Chiplunkar"
-      %span.position= "PhD, Economics (Yale University)"
-
-  =link_to "http://scholar.harvard.edu/abel/home" do
-    %li 
-      / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
-
-      %div= image_tag("Martin_Abel.jpg")
-      / # %span.profile-img= image_tag("Siddharth_George.jpg")
-      %div.name= "Martin Abel"
-      %span.position= "PhD, Economics (Harvard University)"
-
-
-  =link_to "http://www.iq.harvard.edu/people/tomoko-harigaya" do
-    %li 
-      / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
-
-      %div= image_tag("Tomoko_Harigaya.jpg")
-      / # %span.profile-img= image_tag("Siddharth_George.jpg")
-      %div.name= "Tomoko Harigaya"
-      %span.position= "PhD, Economics (Harvard University)"
-
-
-
-
-
-
+.row.people
+  .col-xs-12
+    %h4 
+      DevEc GPS is a community of development economists who work at the frontier and want to share their knowledge with each other. Want to join? Email 
+      =mail_to "info@devecgps.com"
+    %br
+  - User.all.each do |curator|
+    - if curator.lists.count > 0
+      = link_to curator.link do
+        .col-md-3
+          .div.panel
+            .div.panel-main
+              .row
+                .col-xs-3
+                  = image_tag("#{curator.first_name}_#{curator.last_name}.jpg")
+                .col-xs-9
+                  %ul
+                    %li 
+                      %h4= "#{curator.first_name} #{curator.last_name}"
+                    %li
+                      = curator.school
+                    %li= curator.position 
+            .div.panel-sub
+              .row
+                .col-xs-12
+                  - if curator.lists.count > 1
+                    = "Helped write #{pluralize (curator.lists.count - 1), 'entry'}"
