Remove mixpanel analytics until i have users

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -12,9 +12,9 @@
           %br
           = item.id
 
-:javascript
-    $(document).ready( function() {
-      $('.item').click( function() {
-        mixpanel.track("Clicked an article");
-      });
-    });
+/ :javascript
+/     $(document).ready( function() {
+/       $('.item').click( function() {
+/         mixpanel.track("Clicked an article");
+/       });
+/     });
