--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -36,9 +36,9 @@
 - if current_user.try(:admin?)
   ID:
   = @item.id
-:javascript
-    $(document).ready( function() {
-      $('.read').click( function() {
-        mixpanel.track("Clicked to read PDF");
-      });
-    });
+/ :javascript
+/     $(document).ready( function() {
+/       $('.read').click( function() {
+/         mixpanel.track("Clicked to read PDF");
+/       });
+/     });
