--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -88,12 +88,12 @@
 /         / - else
 /         /   %li.auth-button= link_to "Sign In", new_user_session_path
 
-:javascript
-    $(document).ready( function() {
-      $('#how-this-works').click( function() {
-        mixpanel.track("Visited about page", {"age": 10});
-      });
-    });
+/ :javascript
+/     $(document).ready( function() {
+/       $('#how-this-works').click( function() {
+/         mixpanel.track("Visited about page", {"age": 10});
+/       });
+/     });
 
 
 
