--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -66,12 +66,12 @@
   /           %span= collection.name
   /           %span.question-count= "#{pluralize(collection.lists.count, 'research question')}"
 
-:javascript
-  document.ready(function(){
-    $('.collection').click( function() {
-      mixpanel.track("Visited a collection");
-    });
-  });
+/ :javascript
+/   document.ready(function(){
+/     $('.collection').click( function() {
+/       mixpanel.track("Visited a collection");
+/     });
+/   });
 
 
 
