Change 'crowdsourced' to 'digital'

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -22,7 +22,7 @@
 .row.homepage-copy
 
   .col-xs-12
-    %h2 A Crowdsourced Handbook for Development Economics
+    %h2 A Digital Handbook for Development Economics
 
 
   .col-md-4
