Add notice about adding more content soon to side nav

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -328,6 +328,11 @@ li {
 	// font-size: 1.2em;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	li {
+		// line-height: 100px;
+		// margin-top: 10px;
+	}
+	// margin-right: 120px;
     // background: #b92b27;
     // box-shadow: 0 3px 3px rgba(0,0,0,.075);
 
