Add 'no results' message on search

--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -33,9 +33,9 @@ function searchCallback(err, content) {
     $hits.empty();
     var $inputfieldArray = $inputfield.val().split(" ");
     var searchInput = "https://scholar.google.com/scholar?hl=en&q=" + $inputfieldArray.join("+") + "&btnG=&as_sdt=1%2C22&as_sdtp=";
-    $('#page-wrapper').html('<div class="noresults"> \
-      <span>Sorry! We couldn\'t find any research questions for you.</br> \
-      Want to try <a href="' + searchInput + '">searching for <i>' + $inputfield.val() + '</i> on Google Scholar?</a> \
+    $('#page-wrapper').html('<div id="hits" class="noresults"><h3> \
+      <span>Sorry! We couldn\'t find any research questions for you.</h3> \
+      <h4>Check back soon...we\'re adding new content every day. In the meantime, want to try <a href="' + searchInput + '">searching for <i>' + $inputfield.val() + '</i> on Google Scholar?</a> \
       </span> \
       <div> \
       </div> \
