Make the input fields on list forms more user-friendly

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -464,6 +464,24 @@ li {
 	padding-bottom: 10px;
 }
 
+.noresults {
+
+}
+
+
+.add_new_item {
+	margin-bottom: 20px;
+}
+
+.edit_list {
+	input {
+		width: 600px;
+	}
+	textarea {
+		width: 600px;
+		height: 300px;
+	}
+}
 
 
 // body {
