Consider html in abstract

--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -28,7 +28,7 @@
     .abstract
       %ul
         %h5.abstract-header Abstract
-        %li= @item.abstract
+        %li= raw @item.abstract
 
 
 
