--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -327,10 +327,13 @@ li {
 	// border-bottom: 1px solid LightGray;
 	// font-size: 1.2em;
 	padding-top: 10px;
+	width: 90%;
+	// padding-right: 100px;
 	li {
 		// line-height: 100px;
 		// margin-top: 10px;
 		margin-bottom: 10px;
+		margin-top: 5px;
 	}
 	// margin-right: 120px;
     // background: #b92b27;
@@ -341,7 +344,7 @@ li {
 .sub-nav {
 	position: fixed;
 	z-index: 9;
-	width: 100%;
+	width: 90%;
 	ul {
 		// padding-left: 40px;
 	}
