Remove analtyics until I can get them working properly

--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -38,7 +38,7 @@
   = @item.id
 :javascript
     $(document).ready( function() {
-      $('.read').click( function() {
+      $('.item-title').click( function() {
         mixpanel.track("Clicked to read PDF");
       });
     });
