--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -20,8 +20,10 @@
       /       = "unpublished"
 
 :javascript
-    $(document).ready( function() {
-      $('.feed-item').click( function() {
-        mixpanel.track("Vistited list from collection");
-      });
-    });
+    / mixpanel.track('follow me', {
+    /   'action'
+    / })
+      / $('.feed-item').click( function() {
+      /   mixpanel.track("Visited list from collection");
+      / });
+    / });
