--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     .item-title
-      %h4= link_to @item.title, @item.url
+      %h4.pdf= link_to @item.title, @item.url
 
   .col-xs-12
     .item-author.gray= @item.author
