Remove recommendation feature

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -62,8 +62,8 @@
                     - if item.syllabus
                       %br
                       %span.flag.flag-syllabus= "ON A SYLLABUS"
-                    - if item.user_items.where(recommend: true).count > 0
-                      %span.flag.flag-recommend= "RECOMMENDED"
+                    / - if item.user_items.where(recommend: true).count > 0
+                    /   %span.flag.flag-recommend= "RECOMMENDED"
                   %td= item.author
                   %td= item.journal
 
